# filebash-api

./: Cargo.toml  build.sbt  rocket.toml
src/: main.rs
src/api/: code.rs  mod.rs
src/api/users/: create.rs
src/auth/: guard.rs  mod.rs  session.rs
src/auth/session/: create.rs  grant.rs  mod.rs
src/main/scala/com/filebash/api/: NiceExecutionContext.scala  Store.scala
src/main/scala/com/filebash/api/http/: Api.scala
src/main/scala/com/filebash/api/http/routes/: SessionRoute.scala
src/main/scala/com/filebash/api/model/: User.scala
src/store/: mod.rs  modify.rs  outcome.rs  schema.rs  secret.rs  uuid.rs
src/store/models/: invite.rs  mod.rs  session.rs  user.rs
