[package]
name = "filebash-api"
version = "0.1.0"
authors = ["Jeremy Rodi <me@retroc.at>"]

[dependencies]
log = "0.4.6"
env_logger = "0.6.0"
rocket = "0.4.0-rc.1"
rocket_contrib = { version = "0.4.0-rc.1", features = ["uuid"] }
r2d2 = "0.8.3"
uuid = { version = "0.7.1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4.6", features = ["serde"] }
postgres-shared = { version = "0.4.2", features = ["with-uuid", "with-chrono"] }
postgres = { version = "0.15.2", features = ["with-uuid", "with-chrono"] }
r2d2_postgres = "0.14.0"
serde = "1"
serde_derive = "1"
serde_json = "1"
rust-argon2 = "0.3.0"
rand = "0.6"
regex = "1.0.6"
lazy_static = "1.2.0"
zxcvbn = "1"
